<resources>
    <string name="app_name" translatable="false">Boat_H2CO3</string>
    <string name="app_version" translatable="false">3.3.13</string>
    <string name="menu_custom">Config</string>
    <string name="menu_manager">Dir</string>
    <string name="launcher_check_file_msg_ver">Version</string>
    <string name="launcher_main_how_to_use_tip">Instruction of the launcher.</string>
    <string name="launcher_check_file">Check file</string>
    <string name="launcher_main_device">Info</string>
    <string name="launcher_main_help">How to use</string>
    <string name="launcher_initial_install">Initialing runtime...</string>
    <string name="nav_header_account_mode">Online</string>
    <string name="login_account">Email</string>
    <string name="login_password">Password</string>
    <string name="login_checkbox">Remember</string>
    <string name="login">Login</string>
    <string name="login_offline">Offline</string>
    <string name="login_new">Log out</string>
    <string name="login_welcome">Welcome Player</string>
    <string name="login_ing">Waiting...</string>
    <string name="action">Action</string>
    <string name="resetapp">Fix crash.</string>
    <string name="resetwarn">Are you sure to reset?</string>
    <string name="resetcfg">Reset config file</string>
    <string name="delete">Delete</string>
    <string name="log_refresh">Refresh</string>
    <string name="custom_basic">Basic settings</string>
    <string name="custom_reset_runtime">Reset runtime</string>
    <string name="dialog_about">Made by: <a href='http://www.coolapk.com/u/1996447'>Coolapk@Kotiyasanae</a>, View code: <a href='https://github.com/NaCln4c1/Boat_H2CO3'>Github Open source link</a></string>
    <string name="nav_title_3">About</string>
    <string name="menu_donate" translatable="false">Donate</string>
    <string name="menu_ver">Versions</string>
    <string name="home_sw_online">Login-online</string>
    <string name="login_offline_id">Offline ID</string>
    <string name="settings">Settings</string>
    <string name="bc_wait">Waiting for the notification...</string>
    <string name="install_title_1">Game</string>
    <string name="device_info">My device</string>
    <string name="broadcast">Broadcast</string>
    <string name="account_before">Welcome</string>
    <string name="account_after">Press to set</string>
    <string name="welcome_start">Start</string>
    <string name="info_android_ver">Android</string>
    <string name="info_device">My device</string>
    <string name="info_cpu">SOC</string>
    <string name="info_root">Root</string>
    <string name="info_root_true">True</string>
    <string name="info_root_false">False</string>
    <string name="login_done">Done</string>
    <string name="login_fail">Failed</string>
    <string name="download_release">Release</string>
    <string name="download_snapshot">Snapshot</string>
    <string name="download_old_beta">Old</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="launcher_main_check"><![CDATA[Check & Fix game file]]></string>
    <string name="custom_source">Download source</string>
    <string name="total">Total</string>
    <string name="download_page_title">Loading files...</string>
    <string name="exit">Close</string>
    <string name="download_tip">If your downloading is getting slow, press refresh button.</string>
    <string name="manager_set_directory">Game directory</string>
    <string name="manager_set">Set directory</string>
    <string name="install_done">Install finished.</string>
    <string name="no_ver">No versions!</string>
    <string name="manager_reset">Reset directory</string>
    <string name="terminal_exec">Execute</string>
    <string name="menu_terminal">Terminal</string>
    <string name="terminal_text">Input command</string>
    <string name="terminal_clear">Clear</string>
    <string name="terminal_undo">Undo</string>
    <string name="terminal_redo">Redo</string>
    <string name="terminal_clear_history">Delete history</string>
    <string name="manager_output_directory">Set output directory</string>
    <string name="manager_output">Install to directory</string>
    <string name="inst_open_bili">Open video tutorial</string>
    <string name="open_source_library">3rd referenced library</string>
    <string name="thanks">Thanks</string>
    <string name="menu_theme">Theme</string>
    <string name="api_3rd">3rd-party API</string>
    <string name="api_title">API</string>
    <string name="home_login_start_toast">Please wait...</string>
    <string name="home_no_account">None</string>
    <string name="custom_web_go">Go</string>
    <string name="custom_web_url">API website url</string>
    <string name="custom_web_url_title">Type your api website</string>
    <string name="home_open_api_btn_text">View website of your api</string>
    <string name="api_action">It\'s the first test of 3rd-party api login, only support 1 username for every account. So you should view your api website to set your username and skin.</string>
    <string name="home_open_register_btn_text">Buy Minecraft</string>
    <string name="api_ms">Microsoft</string>
    <string name="http_hint"><![CDATA[http:// & https://]]></string>
    <string name="ver_input_hint">/storage/emulated/0 or /sdcard or /mnt/sdcard</string>
    <string name="ver_not_dir">It is not a directory</string>
    <string name="ver_already_exists">Directory already exists</string>
    <string name="ver_not_right_dir">It is not a right directory.</string>
    <string name="ver_add_done">Done</string>
    <string name="ver_null_dir">This directory was disappointed or null.</string>
    <string name="ver_if_del">Delete this version?</string>
    <string name="menu_mod">Mods</string>
    <string name="menu_mod_single">Mods (isolated)</string>
    <string name="add_file">Add</string>
    <string name="start_add_mod">导入中，请稍后，导入过程会自动刷新。</string>
    <string name="launcher_main_save_acc">Save account</string>
    <string name="log_title">View logs</string>
    <string name="set_launguage_title">Language</string>
    <string name="set_language_summary">Translate app to your language.</string>
    <string name="set_language_help_title">Translate</string>
    <string name="set_language_help_summary">Try to translate app for your language.</string>
    <string name="theme_summary">Active Android 12 Material You theme.</string>
    <string name="remove">Remove</string>
    <string name="spinner_official">Official</string>
    <string name="spinner_mcbbs">MCBBS</string>
    <string name="spinner_bmclapi">BMCLAPI</string>
    <string name="ver_type_release">release</string>
    <string name="can_not_material_you"><![CDATA[Can not use Material You Theme(Your Android API<31)]]></string>
    <string name="title_activity_custom_key_board" translatable="false">CustomKeyBoardActivity</string>
    <string name="log_log">Log</string>
    <string name="title_point_up" translatable="false">↑</string>
    <string name="title_point_right" translatable="false">→</string>
    <string name="title_point_left" translatable="false">←</string>
    <string name="title_point_down" translatable="false">↓</string>
    <string name="title_all">All</string>
    <string name="title_in_game">In-game</string>
    <string name="title_out_game">Out-game</string>
    <string name="title_restore">Restore</string>
    <string name="title_show">show</string>
    <string name="title_import">Import</string>
    <string name="title_output">Export</string>
    <string name="title_ok">Ok</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_step">Operation</string>
    <string name="title_warn">Warning</string>
    <string name="title_theme">Theme</string>
    <string name="title_name">Name</string>
    <string name="title_size">size</string>
    <string name="title_width">Width</string>
    <string name="title_height">Height</string>
    <string name="title_keep">Keep</string>
    <string name="title_corner">Corner</string>
    <string name="title_hide">Hide</string>
    <string name="title_edit">Edit</string>
    <string name="title_error">Error</string>
    <string name="title_over_write">Overwrite</string>
    <string name="title_delete">Delete</string>
    <string name="title_note">Prompt</string>
    <string name="title_virtual_controller">Virtual controller</string>
    <string name="title_global_setting">Global Settings</string>
    <string name="title_custom_keyboard">Custom Keyboard</string>
    <string name="title_pc_keyboard">PC Keyboard</string>
    <string name="title_pe_keyboard">MCPE Keyboard</string>
    <string name="title_pe_itembar">MCPE Item Bar</string>
    <string name="title_pe_joystick">MCPE Joystick</string>
    <string name="title_touchpad">Touchpad</string>
    <string name="title_inputbox">Input Box</string>
    <string name="title_inputbox_config">Input Box Settings</string>
    <string name="title_alpha_size">Transperancy</string>
    <string name="title_move">Move</string>
    <string name="title_itembar_config">MCPE Item Bar Settings</string>
    <string name="title_pe_keyboard_config">MCPE Keyboard Settings</string>
    <string name="title_pe_joystick_config">MCPE Joystick Settings</string>
    <string name="title_pc_keyboard_config">PC Keyboard Settings</string>
    <string name="title_screen_touchpad_config">Screen Touchpad Settings</string>
    <string name="title_custom_keyboard_config">Custom Keyboard Settings</string>
    <string name="title_button_config">Key Settings</string>
    <string name="title_sensitivity">Sensitivity</string>
    <string name="title_trigger">Trigger</string>
    <string name="title_mode">Mode</string>
    <string name="title_point">Point</string>
    <string name="title_slide_touch">Slide</string>
    <string name="title_effect">Effect</string>
    <string name="title_total_count">Total</string>
    <string name="title_add">Add</string>
    <string name="title_clear">Empty</string>
    <string name="title_choice">Select</string>
    <string name="title_save">Save</string>
    <string name="title_mould">Template</string>
    <string name="title_custom_button_editor">Custom Key Editor</string>
    <string name="title_margin_left">Left Margin</string>
    <string name="title_margin_top">Top Margin</string>
    <string name="title_mapping">Mapping</string>
    <string name="title_back_color">Background Color</string>
    <string name="title_text_color">Text Color</string>
    <string name="title_text_size">Text Size</string>
    <string name="title_sight_follow">Sight Follow</string>
    <string name="title_input_chars">Input Chars</string>
    <string name="title_copy">Copy</string>
    <string name="title_mouse_lb">Left Button</string>
    <string name="title_mouse_rb">Right Button</string>
    <string name="title_mouse_cb">Middle Button</string>
    <string name="title_wheel_up">Wheel Up</string>
    <string name="title_wheel_down">Wheel Down</string>
    <string name="title_un_alpha_size">Opacity</string>
    <string name="title_colorpicker">Color picker</string>
    <string name="title_multi_line" translatable="false">Multi line</string>
    <string name="title_order">Order</string>
    <string name="title_input">Input</string>
    <string name="title_shortcut">Shortcut</string>
    <string name="title_console">Console</string>
    <string name="title_default">Default</string>
    <string name="tips_failed_to_import_keyboard_layout">Failed to load the keyboard file, the file is damaged!</string>
    <string name="tips_successed_to_import_keyboard_layout">The keyboard file is loaded successfully!</string>
    <string name="splash_runtime_boat" translatable="false">BOAT LIBRARY</string>
    <string name="splash_control_keyboard" translatable="false">Default Keyboard</string>
    <string name="splash_runtime_java8" translatable="false">JRE 8</string>
    <string name="splash_runtime_java17" translatable="false">JRE 17</string>
</resources>