<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/custom_basic">

        <rikka.material.preference.MaterialSwitchPreference
            app:icon="@drawable/ic_theme_custom"
            app:key="material"
            app:summary="@string/theme_summary"
            app:title="@string/menu_theme" />

        <ListPreference
            app:defaultValue="None"
            app:enabled="false"
            app:icon="@drawable/ic_lang"
            app:key="set_lang"
            app:summary="@string/set_language_summary"
            app:title="@string/set_launguage_title" />

        <Preference
            app:key="set_lang_tr"
            app:summary="@string/set_language_help_summary"
            app:title="@string/set_language_help_title" />

        <!--
        <Preference
            app:summary="@string/set_language_text_summary"/>
        -->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/menu_custom">

        <ListPreference
            app:defaultValue="https://download.mcbbs.net"
            app:entries="@array/download_source"
            app:entryValues="@array/download_source_value"
            app:icon="@drawable/ic_menu_install"
            app:key="set_source"
            app:title="@string/custom_source"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/menu_custom">

        <Preference
            app:icon="@drawable/refresh"
            app:key="set_reset_cfg"
            app:title="@string/resetcfg" />

        <Preference
            app:icon="@drawable/ic_del_all"
            app:key="set_reset_run"
            app:summary="@string/resetapp"
            app:title="@string/custom_reset_runtime" />

        <Preference
            app:icon="@drawable/ic_log_outline"
            app:key="set_log"
            app:title="@string/log_title" />

        <Preference
            app:icon="@drawable/ic_crash"
            app:key="set_crash"
            app:title="@string/crash_test" />

    </PreferenceCategory>

</PreferenceScreen>