<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.koishi.launcher.h2co3.ui.manager.ManagerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/manager_directory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/manager_set_directory" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/manager_set_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="?colorOnPrimary"
                android:text="@string/manager_set"
                android:textColor="@color/appBlack_ff_l"
                app:cornerRadius="@dimen/card_radius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/manager_reset_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorOnPrimary"
                android:elevation="0dp"
                android:text="@string/manager_reset"
                android:textColor="@color/appBlack_ff_l"
                app:cornerRadius="@dimen/card_radius"
                app:icon="@drawable/refresh"
                app:iconTint="@color/appBlack_ff" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_10dp"
            android:enabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/manager_output_pack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/manager_output_directory" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manager_output_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_10dp"
            android:layout_weight="1"
            android:elevation="0dp"
            android:enabled="false"
            android:fontFamily="@font/sans"
            android:text="@string/manager_output"
            android:textColor="@color/appBlack_ff_l"
            app:cornerRadius="@dimen/card_radius" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/pb_m"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>