<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/sp_download_source_mode"
        style="@style/TextStyleMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/app_10dp"
        android:layout_marginRight="100dp"
        android:spinnerMode="dropdown"
        android:textSize="@dimen/text_mid" />

    <RadioGroup
        android:id="@+id/rg_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_release"
            style="@style/TextStyleMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_10dp"
            android:checked="true"
            android:text="@string/download_release" />

        <RadioButton
            android:id="@+id/rb_snapshot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_10dp"
            android:text="@string/download_snapshot" />

        <RadioButton
            android:id="@+id/rb_old_beta"
            style="@style/TextStyleMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_10dp"
            android:text="@string/download_old_beta" />

    </RadioGroup>

    <com.mistake.revision.view.PullListView
        android:id="@+id/loadingversionFileListView1"
        style="@style/TextStyleMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2.5dp"
        android:layout_weight="1.0"
        android:listSelector="?attr/selectableItemBackground" />

</LinearLayout>


